# rust-rocket

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci-baseline.yml  ci-namespace.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/models/: task.rs
backend/src/routes/: health.rs  tasks.rs
frontend/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/src/__tests__/: TaskList.test.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: TaskList.tsx
