[package]
name = "rust-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"
rand = "0.8"
rayon = "1"
regex = "1"
once_cell = "1"
bytes = "1"
validator = { version = "0.18", features = ["derive"] }
